2010-04-27  Arseny Slobodyuk  <ampy@users.sourceforge.net>

	* modules/syscalls/calls.c [WIN32_NATIVE || UNIX_CYGWIN32]
	(initialize_sid_apis): dynamic loading of SID API moved out 
	of get_owner block and made available on cygwin.
	(get_owner): fixed potential bugs.
	Comments, cosmetics.

2010-04-22  Arseny Slobodyuk  <ampy@users.sourceforge.net>

	Finish and fix COM init patch.
	* win32aux.d (com_initialized): revoke the variable.
	(init_win32): do not init COM.
	(done_win32) [!MULTITHREAD]: unconditionally call
	CoUninitialize.
	* modules/syscalls/calls.c (BTCoCreateInstance): define
	static function for cygwin.

2010-04-21  Sam Steingold  <sds@gnu.org>

	* makemake.in: use "&&" instead of "if+then" for simplicity

2010-04-20  Sam Steingold  <sds@gnu.org>

	* spvw_language.d (init_language_from): accept NULL argument
	(init_language): simplify logic

2010-04-20  Sam Steingold  <sds@gnu.org>

	* stream.d (rd_ch_terminal3): use alloca instead of malloc to
	allocate the prompt

2010-04-20  Sam Steingold  <sds@gnu.org>

	COMPILER-DIAGNOSTICS:USE-HANDLER: COMPILE-FILE must notice the
	warnings signaled by EVAL-WHEN
	* compiler.lisp (c-warn): do not increase *WARNING-COUNT* here
	(c-style-warn): do not increase *STYLE-WARNING-COUNT* & *WARNING-COUNT*
	* condition.lisp (warn-of-type): increase *WARNING-COUNT* and
	*STYLE-WARNING-COUNT* here when they are bound
	* utils/clispload.lsp (*expected-failures*): remove COMPILE-FILE.2
	& COMPILE-FILE.2A

2010-04-19  Sam Steingold  <sds@gnu.org>

	* stream.d (make_terminal_stream_) [HAVE_TERMINAL3]: disable
	readline signal handling by setting "rl_catch_signals = 0"

2010-04-19  Arseny Slobodyuk  <ampy@users.sourceforge.net>

	Fix COM library initialization in MT version.
	* w32shell.c (BTCoCreateInstance): CoCreateInstance
	with call of CoInitialize if needed.
	(resolve_shell_shortcut): use it.
	* spvw.d (delete_thread) [WIN32_NATIVE]: call
	CoUninitialize on each thread exit.